--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  <header>
+    <a href="/index.html">Home</a>
+    <a href="/products.html">Products</a>
+    <a href="/about.html">About us</a>
+    <a href="/contact.html">Contact us</a>
+  </header>
+  <h1 class="text-4xl">Hello World!</h1>
   <script type="module" src="/main.js"></script>
 </body>
 
