--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <link rel="icon" type="image/svg+xml" href="" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./style.css">
-  <title>Vite App</title>
+  <title>Home</title>
 </head>
 
 <body>
   <header>
-    <a href="/index.html">Home</a>
-    <a href="/products.html">Products</a>
-    <a href="/about.html">About us</a>
-    <a href="/contact.html">Contact us</a>
+    <a href="/main/index.html">Home</a>
+    <a href="/main/products.html">Products</a>
+    <a href="/main/about.html">About us</a>
+    <a href="/main/contact.html">Contact us</a>
   </header>
-  <h1 class="text-4xl">Hello World!</h1>
+  <h1 class="text-4xl">Home</h1>
   <script type="module" src="/main.js"></script>
 </body>
 
